--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Alejandro de Cora",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
